# ATACread

./: .gitignore  PYTHON ATAC RNA-seq一站式读取.md  README.md  pyproject.toml
atacread/: __init__.py  bam_tools.py  cli.py  multiomics.py  read.py  signal_utils.py
tests/: test_bam_tools.py  test_signal_analysis.py
